# smt

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
src/: app.rs  app_runtime.rs  frame.rs  lib.rs  login.rs  lyrics.rs  lyrics_page.rs  main.rs  navigator.rs  play_queue.rs  player.rs  playlist.rs  route.rs  sidebar.rs  songlist.rs  types.rs
src/backend/: api.rs  app_lib.rs  config.rs  mod.rs  model.rs  player.rs  utility.rs
ui/: app-status.slint  app-window.slint  palette.slint  route.slint  sidebar.slint
ui/assets/icon/: iconfont.slint
ui/components/: divider.slint  frame.slint  lyrics.slint  margin-box.slint  player.slint  songlist.slint
ui/pages/: login.slint  lyrics.slint  lyrics_page.slint  playlist.slint  playqueue.slint
ui/test/: keytest.slint
ui/types/: types.slint
