[package]
name = "smt"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI / windowing
i-slint-backend-winit = "=1.15.1"
slint = { version = "1.15.1", features = ["renderer-winit-skia"] }
winit = "0.30.13"

# Async runtime
async-compat = "0.2.5"
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["rt", "sync", "time", "fs", "io-util"] }

# API / serialization
anyhow = "1.0.102"
cookie_store = "0.22.1"
ncm-api-rs = "0.1"
reqwest = { version = "0.13.2", features = ["cookies", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Media / caching
chrono = "0.4.44"
image = "0.25.10"
moka = { version = "0.12.15", features = ["sync"] }
qrcode-generator = "5.0.0"
rand = "0.8.5"
rodio = "0.20.1"


[build-dependencies]
slint-build = "1.15.1"

[dev-dependencies]
tempfile = "3.9.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
panic = "abort"
incremental = true
debug = false
